trunk/Archive2/6c/2c4270358f4b13/output
In file included from main.cpp:2:0:
/usr/local/include/c++/4.9.0/functional: In instantiation of 'static void std::_Function_base::_Base_manager<_Functor>::_M_clone(std::_Any_data&, const std::_Any_data&, std::false_type) [with _Functor = makeLambda(std::unique_ptr<int>)::<lambda()>; std::false_type = std::integral_constant<bool, false>]':
/usr/local/include/c++/4.9.0/functional:1914:51:   required from 'static bool std::_Function_base::_Base_manager<_Functor>::_M_manager(std::_Any_data&, const std::_Any_data&, std::_Manager_operation) [with _Functor = makeLambda(std::unique_ptr<int>)::<lambda()>]'
/usr/local/include/c++/4.9.0/functional:2421:19:   required from 'std::function<_Res(_ArgTypes ...)>::function(_Functor) [with _Functor = makeLambda(std::unique_ptr<int>)::<lambda()>; <template-parameter-2-2> = void; _Res = int; _ArgTypes = {}]'
main.cpp:10:2:   required from here
/usr/local/include/c++/4.9.0/functional:1878:34: error: use of deleted function 'makeLambda(std::unique_ptr<int>)::<lambda()>::<lambda>(const makeLambda(std::unique_ptr<int>)::<lambda()>&)'
    __dest._M_access<_Functor*>() =
                                  ^
main.cpp:8:24: note: 'makeLambda(std::unique_ptr<int>)::<lambda()>::<lambda>(const makeLambda(std::unique_ptr<int>)::<lambda()>&)' is implicitly deleted because the default definition would be ill-formed:
  return [ p( move(p) ) ] () {
                        ^
main.cpp:8:24: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = int; _Dp = std::default_delete<int>]'
In file included from /usr/local/include/c++/4.9.0/memory:81:0,
                 from main.cpp:3:
/usr/local/include/c++/4.9.0/bits/unique_ptr.h:356:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^
